<resources>

    <string name="version">v0.6.1</string>


    <string name="app_name">Blue Waves</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="blue_waves_logo">Blue Waves Logo</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="start">Start</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="back_button">Back Button</string>
    <string name="client_id">503859069311-eldqbthfsr9qp234j37o56725bkijn26.apps.googleusercontent.com</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="mainactivity">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="announcement">Announcement</string>
    <string name="tracker">Tracker</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="authactivity">AuthActivity</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="blue_waves">Blue Waves</string>
    <string name="display_name">Display Name</string>
    <string name="search">Search</string>
    <string name="search_user">Search User...</string>
    <string name="password_secret">**************</string>
    <string name="role">Role:</string>
    <string name="passwordask">Password:</string>
    <string name="emailask">Email:</string>
    <string name="edit">Edit</string>
    <string name="display_nameask">Display Name:</string>
    <string name="logo">Logo</string>
    <string name="no_user_found">No User Found</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="upload">Upload</string>
    <string name="pictures">Pictures</string>
    <string name="post_a_message">Post a Message</string>
    <string name="just_now">Now</string>
    <string name="yesterday">Yesterday</string>
    <string name="write_message_here">Write message here</string>
    <string name="camera">Camera</string>
    <string name="wifi_icon">WIFI ICON</string>
    <string name="upload_icon">UPLOAD ICON</string>
    <string name="upload_speed">Upload Speed:</string>
    <string name="download_speed">Download Speed:</string>
    <string name="download_icon">DOWNLOAD ICON</string>
    <string name="tx_icon">TX ICON</string>
    <string name="tx">TX</string>
    <string name="menu_button">Menu Button</string>
    <string name="expand_collapse">Expand Collapse</string>
    <string name="contact_number">Contact Number</string>
    <string name="remember_email">Remember Email</string>
    <string name="remember_password">Remember Password</string>
    <string name="reset">Reset</string>
    <string name="version_changelog">Version Changelog</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About us</string>
    <string name="suggestions">Suggestions</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>
    <string name="schedule">Schedule</string>
    <string name="customization">Customization</string>
    <string name="suggestion">If you have any suggestion towards the app that you want to add and if you encounter any bugs feel free to describe them so it can be fixed immediately</string>
    <string name="feedback_hint">Please give your honest feedback.</string>
    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
</resources>