<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:contentDescription="@string/blue_waves_logo"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:src="@drawable/bluewavestitlewhite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/hintText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/boxStrokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:maxLength="24"
                android:padding="10dp"
                android:password="false"
                android:textColor="@color/text"
                android:textColorHint="@color/hintText" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rememberEmailCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/remember_email"
            android:textColor="@color/text"
            android:gravity="center"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rememberPasswordCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/remember_password"
            android:textColor="@color/text"
            android:gravity="center"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_below="@id/rememberEmailCheckbox"/>


        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:elevation="100dp"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:indeterminate="true"/>

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_fill"
            android:backgroundTint="@color/buttonColor"
            android:paddingVertical="10dp"
            android:paddingHorizontal="90dp"
            android:textAllCaps="true"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:layout_gravity="top|end"
            android:text="Forget Password?"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/click_to_register"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>