<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A3A3A">



    <ScrollView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top|start"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/back_button"
                app:srcCompat="@drawable/arrow_back_white" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:contentDescription="@string/blue_waves_logo"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/buttonColor"
                android:src="@drawable/profile_white"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/displayNameTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/displayNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/display_name"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText"
                    android:maxLength="24"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/boxStrokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="text|textPassword"
                    android:maxLength="24"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPasswordTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/boxStrokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="text|textPassword"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:elevation="100dp"
                android:layout_marginTop="15dp"
                android:indeterminate="true"/>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_fill"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="@color/buttonColor"/>

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/click_to_login"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>