<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A3A3A">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/background"
        android:id="@+id/progressBar">

        <ProgressBar
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:elevation="100dp"
            android:indeterminate="true"/>
    </RelativeLayout>

    <ScrollView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"><ImageView
            android:id="@+id/signUpBackBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/arrow_back_white" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:contentDescription="@string/blue_waves_logo"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/bluewavestitlewhite"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fNameSUTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fNameSUET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lNameSUTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lNameSUET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameSUTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameSUET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordSUTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordSUET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="text|textPassword"
                    android:maxLength="24"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPasswordSUTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cPasswordSUET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="text|textPassword"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailSUTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailSUET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hintText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pNumberSUTil"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pNumberSUET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CFB4B4B4" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submitSU_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_fill"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="@color/buttonColor"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>